# health-lang-graph-rag

./: .env.example  .gitignore  README.en.md  README.md  package.json  task_graph.puml
backend/: README.md  neo4j.yaml  pyproject.toml
backend/app/: __init__.py  config.py  main.py  state.py
backend/app/api/: __init__.py  data.json  kb_upload_registry.py  oss_sts.py  oss_upload.py
backend/app/common/: Prompt.py  embeddings.py  file_text_parser.py  mcp_http_client.py  prompt_utils.py  thinkings.py
backend/app/data/: device_data.json
backend/app/llm_agent/: agent.py
backend/app/memory/: __init__.py  keys.py  long_term.py  profile.py  redis_client.py  short_term.py  updater.py
backend/app/nodes/: __init__.py  default_handler.py  default_handler_state.py  diet.py  diet_state.py  exercise.py  exercise_state.py  intent.py  multi_moda.py  multi_moda_state.py  query_rewrite.py  rag.py  rag_state.py  selfie.py  selfie_state.py  summary.py  summary_state.py  super.py  super_state.py  surround_amap_maps_mcp.py  surround_amap_maps_mcp_state.py
backend/app/nodes/retrievers/: __init__.py  keyword_retriever.py  neo4j_retriever.py  rag_retriever.py  retrieval_types.py  rrf_retriever.py  vector_retriever.py
backend/app/nodes/retrievers/kg/: __init__.py  connection.py  constant.py  dict_entity_extractor.py  (+3 more)
backend/app/routers/: __init__.py  chat.py  chat_stream.py  health.py  root.py  sessions.py  upload_file.py  upload_img.py  user.py
backend/app/tasks/: __init__.py  add_task.py  vectorization_status.py  vectorize_and_store.py
backend/common/: fallback.json
(+38 files in other folders)
